--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -5,6 +5,24 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@article {MR2316269,
+    AUTHOR = {Bader, Uri and Furman, Alex and Gelander, Tsachik and Monod,
+              Nicolas},
+     TITLE = {Property ({T}) and rigidity for actions on {B}anach spaces},
+   JOURNAL = {Acta Math.},
+  FJOURNAL = {Acta Mathematica},
+    VOLUME = {198},
+      YEAR = {2007},
+    NUMBER = {1},
+     PAGES = {57--105},
+      ISSN = {0001-5962},
+   MRCLASS = {22D12 (22E41 37A15 46B04 46L99)},
+  MRNUMBER = {2316269},
+MRREVIEWER = {Alain Valette},
+       DOI = {10.1007/s11511-007-0013-0},
+       URL = {https://doi.org/10.1007/s11511-007-0013-0},
+}
+
 @article {MR1023471,
     AUTHOR = {de la Harpe, Pierre and Valette, Alain},
      TITLE = {La propri\'{e}t\'{e} {$(T)$} de {K}azhdan pour les groupes localement
