--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -99,9 +99,9 @@
 %
 \begin{abstract}
 If $\mathbf{S}$ is a structure over (a concrete category over)\GS{ajout Category}\PH{concrete, not concert :-), ajout over pour ne pas confondre concrete over metric avec concrete (= concrete over set)} metric spaces, we say that a group G has property \BS{} if any action on a $\mathbf S$-space has bounded orbits. Examples of such structures include metric spaces, Hilbert spaces, CAT(0) cube complexes, connected median graphs, trees or ultra-metric spaces.
-The corresponding properties \BS{} are respectively Bergman property, property FH (which, for countable groups, is equivalent to the celebrated Kazhdan's property (T)), property FW (both for CAT(0) cube complexes and for connected median graphs), property FA and uncuntable cofinality (cof~$\neq\omega$).
+The corresponding properties \BS{} are respectively Bergman's property, property FH (which, for countable groups, is equivalent to the celebrated Kazhdan's property (T)), property FW (both for CAT(0) cube complexes and for connected median graphs), property FA and uncuntable cofinality (cof~$\neq\omega$).
 
-Our main result is that for a large class of structures $\mathbf{S}$, the wreath product $G\wr_XH$ has property \BS{} if and only if both $G$ and $H$ have property \BS{} and $X$ is finite. On one hand, this encompasses in a general setting previously known results for properties FH and FW. On the other hand, this also applies to the Bergman property.
+Our main result is that for a large class of structures $\mathbf{S}$, the wreath product $G\wr_XH$ has property \BS{} if and only if both $G$ and $H$ have property \BS{} and $X$ is finite. On one hand, this encompasses in a general setting previously known results for properties FH and FW. On the other hand, this also applies to the Bergman's property.
 Finally, we also obtain that $G\wr_XH$ has cof~$\neq\omega$ if and only if both $G$ and $H$ have cof~$\neq\omega$ and $H$ acts on $X$ with finitely many orbits.
 \end{abstract}
 %
@@ -143,9 +143,9 @@ Finally, we also obtain that $G\wr_XH$ has cof~$\neq\omega$ if and only if both 
 %
 When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. One such operation, of great use in geometric group theory, is the wreath product, which stands between the direct product and semi-direct product of groups, see Section~\ref{Section:Def} for all the relevant definitions.
 
-A $\mathbf{S}$-space is a metric space with an ``additional structure'' and we will said that a group $G$ has \emph{property \BS{}} if every action by isometries which preserve the $\mathbf{structure}$ on a $\mathbf{S}$-space has bounded orbits, see Definitions~\ref{Def:Categoric} and ~\ref{Def:PropBS} for formal statements. We note that having one bounded orbit implies that all the orbits are. \GS{Ajout definition informelle de S et BS}
+A $\mathbf{S}$-space is a metric space with an ``additional structure'' and we will said that a group $G$ has \emph{property \BS{}} if every action by isometries which preserve the $\mathbf{structure}$ on a $\mathbf{S}$-space has bounded orbits, see Definitions~\ref{Def:Categoric} and ~\ref{Def:PropBS} for formal statements. We note that having one bounded orbit implies that all the orbits are bounded.
 
-In the context of properties defined by actions with bounded orbits, the first result concerning wreath products, due to Cherix, Martin and Valette and later refined by Neuhauser, concerns Kazhdan's property (T).\GS{Ok de pas définir?}\PH{Ok. Rajouté Kazhdan's pour que ce soit clair}
+In the context of properties defined by actions with bounded orbits, the first result concerning wreath products, due to Cherix, Martin and Valette and later refined by Neuhauser, concerns Kazhdan's property (T).\PH{Ok de pas definir ! Rajouté Kazhdan's pour que ce soit clair}
 %
 %
 \begin{thm}[\cite{Cherix2004,Neuhauser2005a}] \label{T:Wreath_prop_T}
@@ -163,6 +163,7 @@ Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ be a set on which
 Then $G\wr_XH$ has property FA if and only if $H$ has property FA, $G$ has no quotient isomorphic to $\Z$ and can not be written as a countable increasing union of proper subgroups.
 \end{thm}
 \GS{Ajouter commentaire sur la différence avec $G$ possède FA ?}
+\PH{C'est maintenant mis après la def 2.5}
 %
 %
 Finally, in a recent note, the authors proved an analogous of Theorem~\ref{T:Wreath_prop_T} for property FW (every action on wall spaces has bounded orbits):
@@ -178,13 +179,13 @@ In particular, Theorem~\ref{Thm:PropFW} covers the result of A. Genevois publish
 
 The above results on properties FH, FW and FA were obtained with distinct methods even if the final results have a common flavor.
 In the same time, all three properties FH, FW and FA can be characterized by the fact that any isometric action on a suitable metric space (respectively Hilbert space, connected median graph and tree) has bounded orbits, see Definition~\ref{Def:FHFA}.
-But more group properties can be characterized in terms of actions with bounded orbits. This is for example the case of the Bergman property (actions on metric spaces) or of uncountable cofinality, denoted by cof~$\neq\omega$, (actions on ultrametric spaces).
+But more group properties can be characterized in terms of actions with bounded orbits. This is for example the case of the Bergman's property (actions on metric spaces), property \FB{} (actions on reflexive Banach spaces) or of uncountable cofinality, denoted by cof~$\neq\omega$, (actions on ultrametric spaces).
 
 By adopting the point of view of actions with bounded orbits, we obtain a unified proof of the following result; see also Theorem~\ref{Thm:Technic} for the general (and more technical) statement.
 %
 %
-\begin{mainthm}\label{Thm:Main} \GS{Changement numérotation}
-Let \BS{} be any one of the following properties: Bergman property, property FH or property FW.
+\begin{mainthm}\label{Thm:Main}\PH{Rajouté \FB{} (en disant avant ce que c'est)}
+Let \BS{} be any one of the following properties: Bergman's property, property \FB, property FH or property FW.
 Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ be a set on which $H$ acts. Then the wreath product $G \wr_X H$ has property \BS{} if and only if $G$ and $H$ have property \BS{} and $X$ is finite.
 \end{mainthm}
 %
@@ -200,7 +201,7 @@ In particular, some of our results do not work for trees and property FA.
 Nevertheless, we are still able to show that if $G\wr_XH$ has property FA, then $H$ acts on $X$ with finitely many orbits. Combining this with Theorem~\ref{Thm:FACK} we obtain
 \begin{mainthm}\label{Thm:FAFiniteOrbits}
 Let $G$ and $H$ be two groups with $G$ non-trivial and $X$ a set on which $H$ acts. Suppose that $H$ acts on $X$ without fixed points.
-Then $G\wr_XH$ has property FA if and only if $H$ has property FA, $H$ acts on $X$ with finitely many orbits, $G$ has no quotient isomorphic to $\Z$ and can not be written as a countable increasing union of proper subgroups.\GS{exprimé sans cof indénombrable}\PH{ok}
+Then $G\wr_XH$ has property FA if and only if $H$ has property FA, $H$ acts on $X$ with finitely many orbits, $G$ has no quotient isomorphic to $\Z$ and can not be written as a countable increasing union of proper subgroups.
 \end{mainthm}
 %
 %
@@ -295,7 +296,7 @@ Other (trivial) examples of wreath products are direct products $G\times H$ whic
 %%%%%%%%%%%%%%    Subsection : Actions with bounded orbits    %%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Classical actions with bounded orbits} \GS{Réorganisation de cette section}
+\subsection{Classical actions with bounded orbits}
 %
 %
 %
@@ -367,7 +368,7 @@ Then $d_\infty(f,g)\coloneqq\max\setst{i}{f(i)\neq g(i)}$ is an ultrametric on $
 %
 %
 %
-\paragraph{Group properties}
+\paragraph{Some classical group properties}\PH{Ajouté ``some classical''}
 We now discuss the bounded orbits properties introduced above for actions on various classes of metric spaces.
 %\PH{Peut-être mettre une phrase avec les réf de première fois où ça été étudié. Soit avant la déf, soit dans le paragraphe après} \GS{On a mis déjà pas mal de références à mon avis...}
 %
@@ -376,8 +377,8 @@ We now discuss the bounded orbits properties introduced above for actions on var
 Let $G$ be a group.
 It is said to have
 \begin{itemize}
-\item\emph{Bergman property} if any action on a metric space has bounded orbits,
-\item\emph{property \FB} if any action on a reflexive real Banach space has bounded orbits,\PH{ajouté ici et dans la description qui suit}
+\item\emph{Bergman's property} if any action on a metric space has bounded orbits,
+\item\emph{property \FB} if any action on a reflexive real Banach space has bounded orbits,\PH{ajouté \FB{} ici, dans la description qui suit et dans l'intro}
 \item \emph{property FH} if any action on a real Hilbert space has bounded orbits,
 \item
 \emph{property FW} if any action on a connected median graph has bounded orbits,
@@ -393,26 +394,30 @@ In the above, \emph{actions} are supposed to preserve the structure. In particul
 The names \FB, FH, FW and FA come from the fact that these properties admit a description in terms of (and were fist studied in the context of) the existence of a Fixed point for actions on reflexive Banach spaces, on Hilbert spaces, on spaces with Walls (or equivalently on CAT(0) cube complexes) and on trees (\emph{Arbres} in french).
 %Finally, a group has cof~$\neq\omega$ (does not have \emph{countable cofinality}) if and only if it cannot be written as a countable increasing union of proper subgroups, see Lemma~\ref{Lemma:CofSub}.
 
-For countable groups (and more generally for $\sigma$-compact locally compact groups), property FH is equivalent to the celebrated Kazhdan's property (T) by the Delorme-Guichardet theorem, but this is not true in general. Indeed in \cite{MR2240370}, Cornulier constructed an uncountable discrete group $G$ with Bergman property which, as we will see just below, implies property FW. Such a group cannot have property (T) as, for discrete groups, it implies finite generation.
-\GS{Ajouter Banach}
+For countable groups (and more generally for $\sigma$-compact locally compact groups), property FH is equivalent to the celebrated Kazhdan's property (T) by the Delorme-Guichardet theorem, but this is not true in general. Indeed in \cite{MR2240370}, Cornulier constructed an uncountable discrete group $G$ with Bergman's property which, as we will see just below, implies property FW. Such a group cannot have property (T) as, for discrete groups, it implies finite generation.
+
+A classical result of the Bass-Serre theory of groups acting on trees \cite{MR0476875},\PH{ajouté ce §} is that a group $G$ has property FA if and only if it satisfies the following three conditions: $G$ has cof~$\neq\omega$, $G$ has no quotient isomorphic to $\Z$ and $G$ is not a non-trivial amalgam.
+In view of this characterization, Theorem~\ref{Thm:FACK} says that property FA almost behave well under wreath products.
+
 
 
 %There are strong links between the properties of Definition~\ref{Def:FHFA} %\cite{MR1432323,MR0476875,MR3299841,Cornulier2013}
-\begin{prop}\PH{2 possibilités: 1) Comme avant. 2) Proposition, mais sans le tag, et en disant que c'est une compile de résultats connus. Comme tu préfères}
+\begin{prop}\PH{2 possibilités: 1) Comme avant. 2) Proposition, en disant que c'est une compile de résultats connus. Comme tu préfères}
 %\GS{J'ai formulé cela comme une proposition pour que cela ressorte plus, à voir ce que tu préfères}
 There are the following implications between the properties of Definition~\ref{Def:FHFA}:
 \begin{equation}\tag{\dag}\label{EQ:Implications}
-	\textnormal{Bergman property}\implies\textnormal{\FB}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies\textnormal{cof~$\neq\omega$}.
+	\textnormal{Bergman's property}\implies\textnormal{\FB}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies\textnormal{cof~$\neq\omega$}.
 \end{equation}
-Moreover, every implication is strict.
+Moreover, except maybe for the leftmost one, all implications are strict.\PH{Je ne sais pas montrer (si c'est vrai) que ``\FB{} n'implique pas Bergman'' !?!}
 \end{prop}
 \begin{proof}
-The implications $\textnormal{Bergman property}\implies \textnormal{\FB}\implies\textnormal{FH}$ and $\textnormal{FW}\implies \textnormal{FA}$ trivially follow from the fact that Hilbert spaces are reflexive Banach spaces, which are themself metric spaces and that trees are connected median graphs.
+The implications $\textnormal{Bergman's property}\implies \textnormal{\FB}\implies\textnormal{FH}$ and $\textnormal{FW}\implies \textnormal{FA}$ trivially follow from the fact that Hilbert spaces are reflexive Banach spaces, which are themself metric spaces and that trees are connected median graphs.
 The implication $\textnormal{FA}\implies\textnormal{cof~}\neq\omega$ is due to Serre \cite{MR0476875}: if $G$ is an increasing union of subgroups $G_i$, then $\bigsqcup G/G_i$ admits a tree structure by joining any $gG_i\in G/G_i$ to $gG_{i+1}\in G/G_{i+1}$. The action of $G$ by multiplication on $\bigsqcup G/G_i$ is by graph isomorphisms and with unbounded orbits.
 Finally, the implication $\textnormal{FH}\implies \textnormal{FW}$ follows from the fact that a group $G$ has property FW if and only if any action on a real Hilbert space which preserves integral points has bounded orbits \cite{Cornulier2013}.
 
 On the other hand, here are some examples for the strictness of the implications of \eqref{EQ:Implications}.
-An infinite finitely generated group with property (T), e.g. $\SL_3(\Z)$, has property FH, but it does not have Bergman property since its action on its Cayley graph is transitive and hence has an unbounded orbit.
+Hyperbolic group with property FH do not have property \FB, see \cite{MR2316269} and the references therein.\PH{Ajouté}
+%An infinite finitely generated group with property (T), e.g. $\SL_3(\Z)$, has property FH, but it does not have Bergman's property since its action on its Cayley graph is transitive and hence has an unbounded orbit.
 The group $\SL_2(\Z[\sqrt{2}])$ has property FW but not FH, see \cite{MR3299841}.
 If $G$ is a non-trivial finite group and $H$ is an infinite group with property FA, then $G\wr_HH$ has property FA by Theorem~\ref{Thm:FAFiniteOrbits}, but does not have property FW by Theorem~\ref{Thm:Main}.
 Finally, $\Z$ has cof~$\neq\omega$, while it acts by translations and with unbounded orbits on the infinite $2$-regular tree.
@@ -420,20 +425,21 @@ Finally, $\Z$ has cof~$\neq\omega$, while it acts by translations and with unbou
 %
 %We have the following strict implications between the properties of Definition~\ref{Def:FHFA} %\cite{MR1432323,MR0476875,MR3299841,Cornulier2013}
 %\begin{equation}\tag{\dag}\label{EQ:Implications}
-%	\textnormal{Bergman property}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies\textnormal{cof~$\neq\omega$}.
+%	\textnormal{Bergman's property}\implies \textnormal{FH}\implies \textnormal{FW}\implies \textnormal{FA}\implies\textnormal{cof~$\neq\omega$}.
 %\end{equation}
-%The implications $\textnormal{Bergman property}\implies \textnormal{FH}$ and $\textnormal{FW}\implies \textnormal{FA}$ trivially follow from the fact that Hilbert spaces are metric space and that trees are connected median graphs.
+%The implications $\textnormal{Bergman's property}\implies \textnormal{FH}$ and $\textnormal{FW}\implies \textnormal{FA}$ trivially follow from the fact that Hilbert spaces are metric space and that trees are connected median graphs.
 %The implication $\textnormal{FA}\implies\textnormal{cof~}\neq\omega$ is due to Serre \cite{MR0476875}: if $G$ is an increasing union of subgroups $G_i$, then $\bigsqcup G/G_i$ admits a tree structure by joining any $gG_i\in G/G_i$ to $gG_{i+1}\in G/G_{i+1}$. The action of $G$ by multiplication on $\bigsqcup G/G_i$ is by graph isomorphisms and with unbounded orbits.
 %Finally, the implication $\textnormal{FH}\implies \textnormal{FW}$ follows from the fact that a group $G$ has property FW if and only if any action on a real Hilbert space which preserves integral points has bounded orbits \cite{Cornulier2013}.
 %
 %On the other hand, here are some examples for the strictness of the implications of \eqref{EQ:Implications}.
-%An infinite finitely generated group with property (T), e.g. $\SL_3(\Z)$, has property FH, but it does not have Bergman property since its action on its Cayley graph is transitive and hence has an unbounded orbit.
+%An infinite finitely generated group with property (T), e.g. $\SL_3(\Z)$, has property FH, but it does not have Bergman's property since its action on its Cayley graph is transitive and hence has an unbounded orbit.
 %The group $\SL_2(\Z[\sqrt{2}])$ has property FW but not FH, see \cite{MR3299841}.
 %If $G$ is a non-trivial finite group and $H$ is an infinite group with property FA, then $G\wr_HH$ has property FA by Theorem~\ref{Thm:FAFiniteOrbits}, but does not have property FW by Theorem~\ref{Thm:Main}.
 %Finally, $\Z$ has cof~$\neq\omega$, while it acts by translations and with unbounded orbits on the infinite $2$-regular tree.
 
-It is possible to consider relative versions of the properties appearing in Definition~\ref{Def:FHFA}. \GS{pas besoin d'expliquer BS comme introduit plus haut} %\PH{J'ai mis cela ici, mais on peut y bouger dans la prochaine sous-section.}
-If $G$ is a group, $H$ a subgroup of $G$ and \BS{} one of the property of Definition~\ref{Def:FHFA} defined by ``every action on $\mathbf{S}$-spaces is bounded'', we say that the pair $(G,H)$ has \emph{relative property \BS} if for every $G$ action on a $\mathbf{S}$-space, the $H$ orbits are bounded.
+It is possible to consider relative versions of the properties appearing in Definition~\ref{Def:FHFA}.
+If $G$ is a group and $H$ a subgroup of $G$% and \BS{} one of the property of Definition~\ref{Def:FHFA} defined by ``every action on $\mathbf{S}$-spaces is bounded''
+, we say that the pair $(G,H)$ has \emph{relative property \BS} if for every $G$ action on a $\mathbf{S}$-space, the $H$ orbits are bounded.\PH{enlevé le rappel de \BS}
 A group $G$ has property \BS{} if and only if for every subgroup $H$ the pair $(G,H)$ has relative property \BS{}, and if and only if for every overgroup $L$ the pair $(L,G)$ has relative property \BS.
 %
 %
@@ -452,7 +458,8 @@ A group $G$ has property \BS{} if and only if for every subgroup $H$ the pair $(
 \subsection{Groups acting with bounded orbits on \texorpdfstring{$\mathbf S$}{\textbf{S}}-spaces}
 It is possible to define other properties in the spirit of Definition~\ref{Def:FHFA} for any ``additional structure on metric spaces''.
 In order to give a uniform treatment of all of them, we will use the notion of quasipseudo-metric spaces and the language of category theory.
-A reader not familiar with category theory and interested only in one specific structure (as for example Banach spaces and groups acting with bounded orbits on them)\GS{Ajouter cet exemple, cf Monod, dans la section 2.2}, may forget all these general considerations and only verify that the arguments of Section~\ref{Section:Proof} apply for their favorite structure.
+A reader not familiar with category theory and interested only in one specific structure\PH{enlevé la phrase sur les Banachs} %(as for example Banach spaces and groups acting with bounded orbits on them)\GS{Ajouter cet exemple, cf Monod, dans la section 2.2},
+may forget all these general considerations and only verify that the arguments of Section~\ref{Section:Proof} apply for their favorite structure.
 %
 %
 \begin{defn}
@@ -504,8 +511,16 @@ A pair $(G,H)$ of a group and a subgroup has \emph{relative property \BS} if for
 %
 All the properties of Definition~\ref{Def:FHFA} are of the form \BS.
 Examples of other interesting properties include $\mathbf{R}$-trees (also called \emph{real trees}) or (some specific subclass of) Banach spaces.
-The property F$\mathbf{R}$ of having bounded actions on $\mathbf{R}$-trees is known to be strictly stronger than FA \cite{MR3465847}. Theorem~\ref{Thm:FAFiniteOrbits} holds whenever property FA is replaced by property F$\mathbf{R}$, with a similar proof.
-On the other hand, the property of having bounded orbits for action on Banach spaces satisfy the analog of Theorem~\ref{Thm:Main}, see Theorem~\ref{Thm:Technic}.
+The property F$\mathbf{R}$ of having bounded actions on $\mathbf{R}$-trees is known to be strictly stronger than FA \cite{MR3465847}. Theorem~\ref{Thm:FAFiniteOrbits} holds whenever property FA is replaced by property F$\mathbf{R}$, with a similar proof.\PH{Enlevé la phrase sur les Banachs, puisque c'est maintenant dans le thm principal}
+We also have
+\begin{exmp}\PH{Ajouté l'exemple ici}
+Let $Z^n$ be the integer lattice of dimension $n$, that is $Z^n$ is the Cayley graph of $\Z^n$ for the standard generating set.
+Then every infinite subgroup of $\Aut(Z^n)$ projects onto $\Z$. Hence, we obtain that a group $G$ has no quotient isomorphic to $\Z$ if and only if every $G$ action on $Z$ has bounded orbits, if and only if every $G$ action on $Z^n$ has bounded orbits. Let us denote by B$\Z$ this property.
+
+It follows from Bass-Serre theory that FA implies B$\Z$. This implication is strict as demonstrated by $\mathbf Q$.
+In fact, the counterexample $\mathbf Q$ shows that B$\Z$ does not implies cof~$\neq\omega$. By looking at $\Z$, we see that  cof~$\neq\omega$ does not implies B$\Z$ neither.
+\end{exmp}
+%On the other hand, the property of having bounded orbits for action on Banach spaces satisfy the analog of Theorem~\ref{Thm:Main}, see Theorem~\ref{Thm:Technic}.
 
 An example of an uninteresting property \BS{} is given by taking $\mathbf{S}$ to be the category of metric spaces of bounded diameter (together with short maps). Indeed, in this case, any group has \BS.
 On the opposite, if $\mathbf{S}$ is the category of extended quasipseudo-metric spaces ($d$ takes values in $\R\cup\{\infty\})$, only the trivial group has \BS.
@@ -515,7 +530,7 @@ However, we have%\PH{Ajouté cette phrase, le lemme et la preuve. C'est utilisé
 %
 %
 \begin{lem}\label{Lemma:BergQPMet}
-A group $G$ has Bergman property (respectively cof~$\neq\omega$) if and only if any $G$ action on a quasipseudo-metric (respectively ultra-quasipseudo-metric) space has bounded orbits.
+A group $G$ has Bergman's property (respectively cof~$\neq\omega$) if and only if any $G$ action on a quasipseudo-metric (respectively ultra-quasipseudo-metric) space has bounded orbits.
 \end{lem}
 \begin{proof}
 One direction is trivial.
@@ -533,12 +548,12 @@ On the other hand, the following result is perhaps more surprising.
 %
 %
 \begin{lem}%\GS{Ajouté ici}
-A group $G$ has Bergman property if and only if any $G$ action on a connected graph has bounded orbits.
+A group $G$ has Bergman's property if and only if any $G$ action on a connected graph has bounded orbits.
 \end{lem}
 \begin{proof}
 The left-to-right implication is clear.
 
-For the other direction, we will use the following characterization of Bergman property due to Cornulier \cite{MR2240370}. A group $G$ has Bergman property if and only if it has cof~$\neq\omega$ and for every generating set $T$ of $G$ the Calyey graph $\Cayley(G;T)$ is bounded.
+For the other direction, we will use the following characterization of Bergman's property due to Cornulier \cite{MR2240370}. A group $G$ has Bergman's property if and only if it has cof~$\neq\omega$ and for every generating set $T$ of $G$ the Calyey graph $\Cayley(G;T)$ is bounded.
 
 Suppose that any $G$ action on a connected graph has bounded orbits. Then $G$ has property FW and hence cof~$\neq\omega$. On the other hand, for every generating set $T$, the group $G$ acts transitively on $\Cayley(G;T)$, which implies that the latter is bounded. By the above characterization, we obtain that $G$ has property~SB.
 \end{proof}
@@ -742,11 +757,11 @@ If both $G$ and $H$ have property \BS{} and $X$ is finite, then $G\wr_X H$ has p
 %
 %
 When $\mathbf{S}$ has a suitable notion of quotients (by a group of isometries), it is possible to obtain a strong version of Lemmas~\ref{Lemma:Quotient} and~\ref{Lemma:InterProd}.
-Here is the corresponding result for Bergman property and cof~$\neq\omega$.%\PH{Je n'ai pas mis l'énoncé général, car les autres espaces qui nous intéressent ne sont pas stable par quotients.}
+Here is the corresponding result for Bergman's property and cof~$\neq\omega$.%\PH{Je n'ai pas mis l'énoncé général, car les autres espaces qui nous intéressent ne sont pas stable par quotients.}
 %
 %
 \begin{prop}\label{Prop:Extension}
-Let \BS{} be either Bergman property or the property cof~$\neq\omega$.
+Let \BS{} be either Bergman's property or the property cof~$\neq\omega$.
 Let $1\to N\to G\to H\to 1$ be a group extension.
 Then $G$ has property \BS{} if and only if $H$ has property \BS{} and the pair $(G,N)$ has the relative \BS{} property.
 \end{prop}
@@ -961,19 +976,17 @@ That is, the diameter of $G\wr_YH.z$ is itself bounded by $\max\{D_0,D_1,\dots,D
 \end{proof}
 %
 %
-While the fact that trees do not have cartesian powers is an obstacle to our methods, we still have the following weak version of Theorem~\ref{Thm:Technic} for property~FA.
-Before stating it, remind that by \cite{MR0476875} a group $G$ has property FA if and only if it satisfies the following three conditions
-\begin{enumerate}
-\item $G$ has cof~$\neq\omega$,
-\item $G$ has no quotient isomorphic to $\Z$,
-\item $G$ is not a non-trivial amalgam.
-\end{enumerate}
-%
-%
-We already know, by Theorem~\ref{Thm:UncCoun}, the behavior of cof~$\neq\omega$ under wreath products.
-On the other hand, let $Z^n$ be the integer lattice of dimension $n$, that is $Z^n$ is the Cayley graph of $\Z^n$ for the standard generating set.
-Then every infinite subgroup of $\Aut(Z^n)$ projects onto $\Z$. Hence, we obtain that a group $G$ has no quotient isomorphic to $\Z$ if and only if every $G$ action on $Z$ has bounded orbits, if and only if every $G$ action on $Z^n$ has bounded orbits.
-We hence obtain
+While\PH{J'ai réécrit tout ce qui suit} the fact that trees do not have cartesian powers is an obstacle to our methods, we still have a weak version of Theorem~\ref{Thm:Technic} for property~FA.
+%Before stating it, remind that by \cite{MR0476875} a group $G$ has property FA if and only if it satisfies the following three conditions
+%\begin{enumerate}
+%\item $G$ has cof~$\neq\omega$,
+%\item $G$ has no quotient isomorphic to $\Z$,
+%\item $G$ is not a non-trivial amalgam.
+%\end{enumerate}
+%%
+%%
+Before stating it, remind that we already know, by Theorem~\ref{Thm:UncCoun}, the behavior of cof~$\neq\omega$ under wreath products.
+On the other hand, we have the following result  (which also admits a direct algebraic proof)
 %
 %
 \begin{lem}\label{Lemma:Z}
@@ -1009,6 +1022,11 @@ Then
 %
 %
 Moreover, by using Lemma~\ref{Lemma:Cof} we can get ride of the ``finitely many orbits'' hypothesis in Theorem~\ref{Thm:FACK} in order to obtain Theorem~\ref{Thm:FAFiniteOrbits}.
+
+Observe\PH{Rajouté ce dernier §. À voir si on le laisse, le change un peu ou l'enlève.} that our statement of Theorem~\ref{Thm:FACK} differs of the original statement of \cite{Cornulier2011}.
+Indeed, where we ask $G$ to have cof~$\neq\omega$ and no quotient isomorphic to $\Z$, the authors of \cite{Cornulier2011} ask $G$ to have cof~$\neq\omega$ and finite abelianization.
+However, these two sets of conditions are equivalent.
+One implication is trivial, as finite abelian groups do not projects onto $\Z$. The other implication follows, for countable abelian groups, from the structure theorem of finitely generated abelian groups. For the general case, Y. Cornulier kindly reminded us that any infinite abelian group as a countable quotient.
 %
 %
 %
@@ -1022,6 +1040,11 @@ Moreover, by using Lemma~\ref{Lemma:Cof} we can get ride of the ``finitely many 
 %\bibliography{biblio.bib}
 %\bibliographystyle{plain}
 \begin{thebibliography}{10}
+
+\bibitem{MR2316269}
+Uri Bader, Alex Furman, Tsachik Gelander, and Nicolas Monod.
+\newblock Property ({T}) and rigidity for actions on {B}anach spaces.
+\newblock {\em Acta Math.}, 198(1):57--105, 2007.
 
 \bibitem{Bandelt1984}
 Hans-J{\"{u}}rgen Bandelt.
@@ -1121,124 +1144,6 @@ Jean-Pierre Serre.
   Hyman Bass, Ast{\'e}risque, No. 46.
 
 \end{thebibliography}
-
-
-%\clearpage
-%%
-%%
-%%
-%%
-%While the fact that trees do not have cartesian powers is an obstacle to our methods, we still have a weak version of Theorem~\ref{Thm:Technic} for property FA.
-%Before stating it, remind that by \cite{MR0476875} a group $G$ has property FA if and only if it satisfies the following three conditions
-%\begin{enumerate}
-%\item $G$ has cof~$\neq\omega$,
-%\item $G$ has no quotient isomorphic to $\Z$,
-%\item $G$ is not a non-trivial amalgam.
-%\end{enumerate}
-%%
-%%
-%In this context, the following result on surjections onto $\Z$ will be helpful.
-%%
-%%
-%\begin{lem}\label{Lemma:Sujrect}
-%The group $G\wr_XH$ has no quotient isomorphic to $\Z$ if and only if both $G$ and $H$ have no quotient isomorphic to $\Z$.
-%\end{lem}
-%\begin{proof}
-%First, observe that $A\times B$ has no quotient isomorphic to $\Z$ if and only if both $A$ and $B$ have no quotient isomorphic to $\Z$.
-%Indeed, one direction simply follows from the fact that both $A$ and $B$ are quotients of $A\times B$.
-%On the other hand, if we have a non trivial $f\colon A\times B\to\Z$, then the restrictions of $f$ to $A$ and $B$ give us $f_A\colon A\to\Z$ and  $f_B\colon B\to\Z$ that cannot both be trivial.
-%
-%Secondly, if $A$ is an abelian group, then $\Hom(\bigoplus_XA,\Z)\cong\prod_X\Hom(A,\Z)$.
-%
-%Finally, a group $A$ has a quotient isomorphic to $\Z$ if and only if its abelianization $A^{\ab}$ has a quotient isomorphic to $\Z$.
-%
-%Altogether, the group $G\wr_XH$ has no quotient isomorphic to $\Z$ if and only if $(\bigoplus_{X/H}G^{\ab})\times H^{\ab}$ has no quotient isomorphic to $\Z$, if and only if $\bigoplus_{X/H}G^{\ab}$ and $H$ have no quotient isomorphic to $\Z$.
-%But $\bigoplus_{X/H}G^{\ab}$ has no quotient isomorphic to $\Z$ if and only if $G^{\ab}$ has no quotient isomorphic to $\Z$, if and only if $G$ has no quotient isomorphic to $\Z$.
-%%
-%%In particular, $\bigoplus_XG$ has a quotient isomorphic to $\Z$ if and only if $G$ has a quotient isomorphic to $\Z$.
-%%On the other hand, a group $A$ has a quotient isomorphic to $\Z$ if and only if its abelianization $A^{\ab}$ has a quotient isomorphic to $\Z$.
-%%Hence, the desired result on wreath products follows from the analogous result on semidirect product which itself follows from the above result on direct products.
-%%
-%%Altogether, $G\wr_XH$ has no quotient isomorphic to $\Z$ if and only if $N^{\ab}\times H^{\ab}$ has no quotient isomorphic to $\Z$.
-%%
-%%It hence remains to prove that $N\rtimes H$ has no quotient isomorphic to $\Z$ if and only if both $N$ and $H$ have no quotient isomorphic to $\Z$.
-%%
-%%Since $(N\rtimes H)^{\ab}=N^{\ab}\times H^{\ab}$ it remains to show that
-%\end{proof}
-%%
-%%
-%By Theorem~\ref{Thm:UncCoun}, Corollary~\ref{Cor:Wreath} and Lemmas~\ref{Lemma:Cof} and \ref{Lemma:Sujrect} we finally obtain
-%%
-%%
-%\begin{prop}\label{Prop:WRFA}
-%Let $G$ and $H$ be two groups with $G$ non-trivial and $X$ a set on which $H$ acts.
-%Then
-%\begin{enumerate}
-%\item If $G\wr_XH$ has property FA, then $H$ has property FA, $H$ acts on $X$ with finitely many orbits, $G$ has no quotient isomorphic to $\Z$  and $G$ has cof~$\neq\omega$,
-%\item If both $G$ and $H$ have property FA and $X$ is finite, then $G\wr_XH$ has property~FA.
-%\end{enumerate}
-%\end{prop}
-%%
-%%
-%In \cite{Cornulier2011} Cornulier and Kar announced a characterization of property FA for wreath products. In particular, they proved
-%%
-%%
-%\begin{prop}[\cite{Cornulier2011}]\label{Prop:CorKar}
-%Let $G$ and $H$ be two groups and let $X$ be a set on which $H$ acts.
-%Suppose that $H$ has property FA, $H$ acts on $X$ with finitely many orbits and without fixed points, $G$ has no quotients isomorphic to $\Z$ and $G$ has cof~$\neq\omega$.
-%Then $G\wr_XH$ has property FA.
-%\end{prop}
-%%
-%%
-%Together with Proposition~\ref{Prop:WRFA}, this implies Theorem~\ref{Thm:FAFiniteOrbits}.
-%
-%The authors of \cite{Cornulier2011} also claimed that if $H$ acts on $X$ with finitely many orbits and without fixed points and $G\wr_XH$ has property FA then $G$ has finite abelianization:
-%
-%``\textit{Moreover, the abelianization of $G\wr_XH$ is given by $\bigoplus_Y(G^{\ab})\times H^{\ab}$, where $Y$ denotes the orbit set $H\setminus X$. Hence the abelianization of $G$ is also finite.}''
-%
-%While this is true for countable $G$ (by Theorem~\ref{Thm:FAFiniteOrbits} and Lemma~\ref{Lemma:Abelian}) this is false in general as demonstrated by $G\wr_{C_2}C_2$, with $G$ an infinite abelian group with property FA (for example $G=\R$).
-%Nevertheless, their proof of Proposition~\ref{Prop:CorKar} used only the fact that $G$ has no quotients isomorphic to $\Z$, and not the stronger fact that $G$ has finite abelianization.
-%%
-%%
-%%\begin{thm}\label{Thm:FAFiniteOrbits}
-%%Let $G$ and $H$ be two groups with $G$ non-trivial and $X$ a set on which $H$ acts. Suppose that $H$ acts on $X$ without fixed points.
-%%Then $G\wr_XH$ has property FA if and only if $H$ has property FA, $H$ acts on $X$ with finitely many orbits, $G$ has no quotients isomorphic to $\Z$ and $G$ has cof~$\neq\omega$.
-%%\end{thm}
-%\begin{lem}\label{Lemma:Abelian}
-%Let $G$ be a group with cof~$\neq\omega$ and that does not surject to $\Z$. Then the torsion subgroup of $G^{\ab}$ is finite.
-%
-%If moreover $G^{\ab}$ is a most countable, then $G^{\ab}$ is torsion and therefore finite.
-%\end{lem}
-%%
-%%
-%\begin{proof}
-%We have that $G^{\ab}$ itself has cof~$\neq\omega$ and that it does not surject to $\Z$.
-%Since $G^{\ab}$ is abelian, it is a direct sum of a torsion abelian group $T$ and of a torsion-free abelian group $A$.
-%Both of them have cof~$\neq\omega$ and do not surject onto $\Z$.
-%The subgroup $T$ is finite by Lemma~\ref{Lemma:Torsion}.
-%
-%On the other hand, if $A$ is at most countable, then by cof~$\neq\omega$ it is finitely generated and hence isomorphic to some $\Z^n$. By hypothesis, we have that $n=0$ and $A$ is trivial.
-%\end{proof}
-%%
-%%
-%\begin{lem}\label{Lemma:Torsion}
-%An abelian torsion group with cof~$\neq\omega$ is finite.
-%\end{lem}
-%\begin{proof}
-%By a result of Kaplansky,\PH{Mettre ref ?} a torsion abelian group is isomorphic to a direct sum $\bigoplus_{i\in I}H_i$ where $H_i$ is an abelian $p_i$-group ($p_i$ prime).
-%By the cof~$\neq\omega$ hypothesis, $I$ is finite and each $H_i$ has cof~$\neq\omega$.
-%It is therefore enough to show that any abelian $p$-group $H$ with cof~$\neq\omega$ is finite.
-%Such an $H$ is necessary of bounded exponent, as otherwise it would be the increasing reunion of the proper subgroups $K_n\coloneqq\setst{g\in H}{o(g)\leq p^n}$.
-%But any abelian $p$-group of finite exponent is isomorphic to a direct sum of cyclic groups.\PH{Mettre ref ? Prüfer and Baer} By cof~$\neq\omega$, this direct sum is finite and so is $H$.
-%\end{proof}
-%%
-%%
-%\begin{lem}\label{Lemma:TorsionFree}?
-%A torsion-free abelian with cof~$\neq\omega$ is either finite, or it has a quotient isomorphic to $\Z$.
-%\end{lem}
-%\begin{proof}
-%Let $A$ be a torsion-free abelian group with cof~$\neq\omega$ and with no quotient isomorphic to $\Z$.
-%\end{proof}
 %
 %
 %
