--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -5,6 +5,38 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@incollection {MR3382026,
+    AUTHOR = {Nowak, Piotr W.},
+     TITLE = {Group actions on {B}anach spaces},
+ BOOKTITLE = {Handbook of group actions. {V}ol. {II}},
+    SERIES = {Adv. Lect. Math. (ALM)},
+    VOLUME = {32},
+     PAGES = {121--149},
+ PUBLISHER = {Int. Press, Somerville, MA},
+      YEAR = {2015},
+   MRCLASS = {22D12 (20J06)},
+  MRNUMBER = {3382026},
+MRREVIEWER = {Bachir Bekka},
+}
+
+@article {MR2137870,
+    AUTHOR = {Brown, Nathanial and Guentner, Erik},
+     TITLE = {Uniform embeddings of bounded geometry spaces into reflexive
+              {B}anach space},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {133},
+      YEAR = {2005},
+    NUMBER = {7},
+     PAGES = {2045--2050},
+      ISSN = {0002-9939},
+   MRCLASS = {57R67 (19J25 19K35 46B07 46T99)},
+  MRNUMBER = {2137870},
+MRREVIEWER = {Jean-Louis Tu},
+       DOI = {10.1090/S0002-9939-05-07721-X},
+       URL = {https://doi.org/10.1090/S0002-9939-05-07721-X},
+}
+
 @article {MR2316269,
     AUTHOR = {Bader, Uri and Furman, Alex and Gelander, Tsachik and Monod,
               Nicolas},
